mlir/test/mlir-pdll/Parser/include-file-twice-without-once.pdll
// RUN: not mlir-pdll %s -I %S 2>&1 | FileCheck %s

#include "include/included.pdll"
// CHECK: error: `IncludedPattern` has already been defined
#include "include/included.pdll"
